# HaskellExperiments

./: .gitignore  .travis.yml  Compiler.cabal  README.md  buildAndRunTests.sh
ComputeSymbolsTable/: ComputeSymbolsTable.cabal
ComputeSymbolsTable/src/: Main.hi  Main.hs
HindleyMilnerTypeInference/: .project  HindleyMilnerTypeInference.cabal
HindleyMilnerTypeInference/src/: AlphaConverter.hs  AlphaConverter_Tests.hs  Ast.hs  Ast_Tests.hs  Environments.hs  Environments_Tests.hs  Main.hs  Parser.hs  Substitutions.hs  Substitutions_Tests.hs  Tests.hs  TypeInfer.hs  TypeInfer_Tests.hs  TypeTree.hs  Unification.hs  Unification_Tests.hs  Utils.hs
src/Compiler/: Ast.hs  Utils.hs
src/Compiler/Parser/: BaseParsers.hs
src/Compiler/TypeInference/: AlphaConverter.hs  Environments.hs  Substitutions.hs  TypeInfer.hs  Unification.hs
src/TypeInference/: AlphaConverter.hs  Environments.hs  Substitutions.hs  TypeInfer.hs  TypeTree.hs  Unification.hs
tests/: Tests.hs
tests/Compiler/: Ast_Tests.hs
tests/Compiler/TypeInference/: AlphaConverter_Tests.hs  Environments_Tests.hs  Substitutions_Tests.hs  TypeInfer_Tests.hs  Unification_Tests.hs
tests/TypeInference/: AlphaConverter_Tests.hs
