name:           HindleyMilnerTypeInference
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         epentangelo

executable HindleyMilnerTypeInference
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers,
                   mtl
  ghc-options:     -Wall
  other-modules:   
                   Ast,
                   TypeTree,
                   Substitutions,
                   Utils,
                   Environments,
                   Unification,
                   AlphaConverter,
                   TypeInfer

